fix: Fix p alignment

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -329,11 +329,6 @@ footer a {
     @media screen and (max-width: $small) {
         display: none;
     }
-
-    p {
-        margin-left: 0;
-        padding-left: 0;
-    }
 }
 
 #root:before {
